feat: add JVM default options (#1087)
* feat: add JVM default options

* build: user path_to_jar env variable

* build: use ZGC instead of ParallelGC

* build; change user of docker img

* bump: version to 3.24.1

* build: fix sonar lint